force-app/main/default/objects/Settlement_Calc_Config__mdt/Settlement_Calc_Config__mdt.object-meta.xml
<CustomObject>
    <label>Settlement Calc Config</label>
    <pluralLabel>Settlement Calc Configs</pluralLabel>
</CustomObject>