force-app/main/default/objects/Settlement_Calc_Config__mdt/fields/Default_Bank_Fee__c.field-meta.xml
<CustomField>
    <fullName>Default_Bank_Fee__c</fullName>
    <label>Default Bank Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>