force-app/main/default/objects/Settlement_Calc_Config__mdt/fields/Default_Date_Rule__c.field-meta.xml
<CustomField>
    <fullName>Default_Date_Rule__c</fullName>
    <label>Default Date Rule</label>
    <length>50</length>
    <type>Text</type>
</CustomField>