force-app/main/default/objects/Settlement_Calc_Config__mdt/fields/Default_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Default_Frequency__c</fullName>
    <label>Default Frequency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>