force-app/main/default/objects/Settlement_Calc_Config__mdt/fields/EPPS_Monthly_Minimum__c.field-meta.xml
<CustomField>
    <fullName>EPPS_Monthly_Minimum__c</fullName>
    <label>EPPS Monthly Minimum</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>