force-app/main/default/objects/Settlement_Calc_Config__mdt/fields/EPPS_Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>EPPS_Transaction_Fee__c</fullName>
    <label>EPPS Transaction Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>