force-app/main/default/objects/Settlement_Calc_Config__mdt/fields/Escrow_Warning_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Warning_Threshold__c</fullName>
    <label>Escrow Warning Threshold</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>