force-app/main/default/objects/Settlement_Calc_Config__mdt/fields/Fully_Funded_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Fully_Funded_Tolerance__c</fullName>
    <label>Fully Funded Tolerance</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>