force-app/main/default/objects/Settlement_Calc_Config__mdt/fields/Max_Payments__c.field-meta.xml
<CustomField>
    <fullName>Max_Payments__c</fullName>
    <label>Max Payments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>