force-app/main/default/objects/Settlement_Calc_Config__mdt/fields/Max_Settlement_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Max_Settlement_Percentage__c</fullName>
    <label>Max Settlement Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>