force-app/main/default/objects/Settlement_Calc_Config__mdt/fields/Min_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Payment_Amount__c</fullName>
    <label>Min Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>