force-app/main/default/objects/Settlement_Calc_Config__mdt/fields/Min_Settlement_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Min_Settlement_Percentage__c</fullName>
    <label>Min Settlement Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>