force-app/main/default/objects/Settlement_Calc_Config__mdt/fields/Remainder_Max_Iterations__c.field-meta.xml
<CustomField>
    <fullName>Remainder_Max_Iterations__c</fullName>
    <label>Remainder Max Iterations</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>